Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Aqui va un blog post atractivo e interesante </h1>
                 <p>Parrafo de inicio para explicar cosas que se pueden hacer con ramas</p>
