--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Aqui va un blog post atractivo e interesante </h1>
                 <p>Parrafo de inicio para explicar cosas que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir informacion y tus ideas bla bla bla </p>
             </div>            
         </div>        
     </body>
