--- a/blogpost.html
+++ b/blogpost.html
@@ -8,13 +8,14 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    tu blog de confianza
+                    tu blog de confianza MAESTRO
                 </span>
             </div>
             <div id="post">
                 <h1>Aqui va un blog post atractivo e interesante </h1>
                 <p>Parrafo de inicio para explicar cosas que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas bla bla bla </p>
+                <p>PLATZI -- SODIMAC LO MAXIMO</p>
             </div>            
         </div>        
     </body>
