CAmbie el titulo del blogposr
porque puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Primer Post</title>
+        <title>Primer Post bienvenido</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
