Cabecera Footer Terminada

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,10 @@
                 <p>Parrafo de inicio para explicar cosas que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas bla bla bla </p>
                 <p>PLATZI -- SODIMAC LO MAXIMO</p>
-            </div>            
+            </div>
+	    <div id="footer">
+hecho con perseverancia 
+	    </div>
         </div>        
     </body>
 </html>
